# kokkos-playground

./: .gitignore  CMakeLists.txt  dep.csv
src/: CMakeLists.txt  main.cpp  main_kokkos.cpp  playground.cpp  playground.hpp  save  timer.h
test/: main.output  main.xc  sub.sh
